Fix link case sensitivity for login.html

--- a/MID-Term/test.html
+++ b/MID-Term/test.html
@@ -24,7 +24,7 @@
     <div>
        
         <ul>
-            <a href="Login.html" id="h">Login</a>
+            <a href="login.html" id="h">Login</a>
             <a href="Nurse.html" id="c">Nurse</a>
             <a href="Admin.html" id="a">Admin</a>
             <a href="Error.html" id="e">Error</a>
